<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
     <Button
        android:id="@+id/init"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/tts_init"
        android:onClick="init"
         />

    <Button
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/init"
        android:text="@string/tts_start"
        android:onClick="start"
        />

    <Button
        android:id="@+id/pause"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/start"
        android:layout_centerHorizontal="true"
        android:text="@string/tts_pause"
        android:onClick="pause"
         />

    <Button
        android:id="@+id/resume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pause"
        android:layout_centerHorizontal="true"
        android:text="@string/tts_resume"
        android:onClick="resume"
         />

    <Button
        android:id="@+id/stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/resume"
        android:layout_centerHorizontal="true"
        android:text="@string/tts_stop"
        android:onClick="stop"
        />
     <Button
        android:id="@+id/finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/stop"
        android:layout_centerHorizontal="true"
        android:text="@string/tts_finish"
        android:onClick="finish"
        />

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/finish"
        android:max="100"
        android:progress="0" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/progress" >

        <TextView
            android:id="@+id/text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

</RelativeLayout>
